package Pizza;

/**
 * @author bruel (from O'Reilly Head-First series)
 * @depend - * - Pizza
 */
public class PizzaGrecqueStyleBrest extends Pizza{

	@Override
	public void preparer() {
		// TODO Auto-generated method stub
		
	}

	@Override
	public void cuire() {
		// TODO Auto-generated method stub
		
	}

	@Override
	public void couper() {
		// TODO Auto-generated method stub
		
	}

	@Override
	public void emballer() {
		// TODO Auto-generated method stub
		
	}

}
