package Pizza;


public class PizzaFromageStyleBrest extends Pizza{
	
	public PizzaFromageStyleBrest() {
		super.nom = "Pizza sauce style brest et fromage";
		super.garniture.add(" Parmigiano reggiano râpé");
	}
	
}
