@startuml
class PizzeriaFactory [[java:Fabrique.PizzeriaFactory]] {
	-{static}PizzeriaFactory uniqueInstance
	-PizzeriaFactory()
	+{static}PizzeriaFactory getInstance()
	+Pizzeria creer(String nom)
}
class PizzeriaStyleBrest [[java:Fabrique.PizzeriaStyleBrest]] {
	+Pizza creerPizza(String type)
}
class Pizzeria [[java:Fabrique.Pizzeria]] {
}
Pizzeria <|-- PizzeriaStyleBrest
class PizzeriaStyleStrasbourg [[java:Fabrique.PizzeriaStyleStrasbourg]] {
	+Pizza creerPizza(String type)
}
class Pizzeria [[java:Fabrique.Pizzeria]] {
}
Pizzeria <|-- PizzeriaStyleStrasbourg
abstract class Pizzeria [[java:Fabrique.Pizzeria]] {
	+Pizza commanderPizza(String type)
	#{abstract}Pizza creerPizza(String type)
}
abstract class Pizza [[java:Pizza.Pizza]] {
	#String nom
	#String pate
	#String sauce
	#ArrayList<String> garniture
	+void preparer()
	+void cuire()
	+void couper()
	+void emballer()
	+String getNom()
}
class PizzaPoivronsStyleStrasbourg [[java:Pizza.PizzaPoivronsStyleStrasbourg]] {
}
Pizza <|-- PizzaPoivronsStyleStrasbourg
class PizzaPoivronsStyleBrest [[java:Pizza.PizzaPoivronsStyleBrest]] {
}
Pizza <|-- PizzaPoivronsStyleBrest
class PizzaFromageStyleStrasbourg [[java:Pizza.PizzaFromageStyleStrasbourg]] {
	+PizzaFromageStyleStrasbourg()
	+void couper()
}
Pizza <|-- PizzaFromageStyleStrasbourg
class PizzaGrecqueStyleBrest [[java:Pizza.PizzaGrecqueStyleBrest]] {
}
Pizza <|-- PizzaGrecqueStyleBrest
class PizzaGrecqueStyleStrasbourg [[java:Pizza.PizzaGrecqueStyleStrasbourg]] {
}
Pizza <|-- PizzaGrecqueStyleStrasbourg
class PizzaFromageStyleBrest [[java:Pizza.PizzaFromageStyleBrest]] {
	+PizzaFromageStyleBrest()
}
Pizza <|-- PizzaFromageStyleBrest

Pizzeria --> Pizza
PizzeriaStyleBrest --> PizzaFromageStyleBrest
PizzeriaStyleBrest --> PizzaGrecqueStyleBrest
PizzeriaStyleBrest --> PizzaPoivronsStyleBrest
PizzeriaStyleStrasbourg --> PizzaFromageStyleStrasbourg
PizzeriaStyleStrasbourg --> PizzaGrecqueStyleStrasbourg
PizzeriaStyleStrasbourg --> PizzaPoivronsStyleStrasbourg
@enduml